pitrery 1.5
===========

  * Support rsync for the base backup. tar remains the default with a
    new -s option for backup_pitr and the STORAGE configuration
    variable

  * Save configuration files if they are outside of PGDATA

  * Rename `pitr_mgr` to `pitrery`, with a symlink for backward
    compatibility

  * Make the time based purge compatible with the count purge,
    allowing to purge backups based on age _and_ keeping a minimum
    number of backups

  * Make the old WAL purge better by comparing parts of the file name
    instead of the whole. Bash does not handle well the full file name
    when converted to a number (too big)

  * Safely purge old .backup files. Always keep .history files

  * Improve documentation

  * Better check the input file in archive_xlog

  * Use rsync to safely transfer to the remote host in archive_xlog

  * Document compression tools options


pitrery 1.4
===========

  * Merge archiving configuration with pitr_mgr configuration

  * Add search for configuration file on its basename in archive_xlog
    and restore_xlog

  * Add more options to restore to configure the restore_command

  * Fix hang on purge when all backups are removed

  * Fix on tablespace handling when no tablespaces exist

  * Add an UPGRADE documentation

  * Copy docs and configuration to the documentation directory


pitrery 1.3
===========

  * Support PostgreSQL 9.2

  * Relocation of tablespaces on restore

  * Simpler archiving script, only archive to one place

  * Support for username on SSH connections

  * Better display of the list of backups


  * Add a summary of all information needed for a restore

  * Add a dry run mode on restore

  * Lots of bug fixes


pitrery 1.2
===========

This version is buggy, do not use it.


pitrery 1.1
===========

  * Fix backup selection date. Now backups are selected based on the
    end of the base backup, a base backup is not usable until the time